Cambio en la forma de ordenar las cartas

--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,19 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="opciones d-flex d-flex-inline">
+        <div class="col-sm-12 col-md-2">
           <input type="text" class="form-control m-2" id="numCards" />
-          <button id="btnDraw" type="button" class="btn btn-primary m-2">
+        </div>
+        <div class="col-6">
+          <button id="btnDraw" type="button" class="btn btn-primary mt-2 m-1">
             Draw
           </button>
-          <button id="btnSort" type="button" class="btn btn-primary m-2">
-            Sort
+          <button id="btnSort" type="button" class="btn btn-primary mt-2 m-1">
+            Bubble sort
           </button>
         </div>
 
